# snapshort

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: app.rs  lib.rs  main.rs  state.rs  theme.rs
crates/desktop/src/views/: assets.rs  dnd.rs  editor.rs  mod.rs  panels.rs  timeline.rs  welcome.rs
crates/domain/: Cargo.toml
crates/domain/src/: errors.rs  events.rs  jobs.rs  lib.rs  value_objects.rs
crates/domain/src/entities/: asset.rs  clip.rs  mod.rs  project.rs  timeline.rs
crates/infra-ai/: Cargo.toml
crates/infra-ai/src/: lib.rs
crates/infra-db/: Cargo.toml
crates/infra-db/migrations/: 001_initial.sql  002_jobs.sql  003_tracks_clips_track_type.sql  004_projects_active_timeline.sql
crates/infra-db/src/: connection.rs  error.rs  lib.rs
crates/infra-db/src/repos/: asset_repo.rs  job_repo.rs  mod.rs  project_repo.rs  timeline_repo.rs  traits.rs
crates/infra-media/: Cargo.toml
crates/infra-media/src/: lib.rs
crates/infra-render/: Cargo.toml
crates/infra-render/src/: lib.rs  timeline_ffmpeg.rs
crates/ui-core/: Cargo.toml
crates/ui-core/src/: lib.rs
crates/usecases/: Cargo.toml
crates/usecases/src/: commands.rs  error.rs  events.rs  lib.rs
crates/usecases/src/services/: asset_service.rs  jobs_service.rs  mod.rs  playback_service.rs  preview_service.rs  project_service.rs  project_snapshot.rs  timeline_service.rs  undo_service.rs
