[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/usecases",
    "crates/infra-db",
    "crates/infra-media",
    "crates/infra-render",
    "crates/infra-ai",
    "crates/ui-core",
    "crates/desktop",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Snapshort Team"]
license = "MIT"
repository = "https://github.com/snapshort/editor"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.43", features = ["full"] }
flume = "0.11"
futures = "0.3"
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error Handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "1", features = ["full"] }
directories = "5"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Immutable Collections
im = { version = "15", features = ["serde"] }

# UI
egui = "0.29"
eframe = { version = "0.29", features = ["wgpu"] }
egui_extras = { version = "0.29", features = ["default"] }

# GPU
wgpu = "23"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"

# Media
ffmpeg-next = "7"
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.15"
cpal = "0.15"

# Image processing
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }

# Testing
tokio-test = "0.4"
tempfile = "3"

# Proc macro helpers
trait-variant = "0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
