[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/usecases",
    "crates/infra-db",
    "crates/infra-media",
    "crates/infra-render",
    "crates/infra-ai",
    "crates/ui-core",
    "crates/desktop",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["mlm-games"]
license = "MIT"
repository = "https://github.com/mlm-games/snapshort"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
flume = "0.12"
futures = "0.3"
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error Handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "2", features = ["full"] }
directories = "6"
parking_lot = "0.12"

# Immutable Collections
im = { version = "15", features = ["serde"] }

# Repose UI Framework (using local development version for docking support)
repose-core = { path = "/home/ymsr/Documents/Repos/repose/crates/repose-core" }
repose-ui = { path = "/home/ymsr/Documents/Repos/repose/crates/repose-ui" }
repose-platform = { path = "/home/ymsr/Documents/Repos/repose/crates/repose-platform", features = ["desktop"] }
repose-text = { path = "/home/ymsr/Documents/Repos/repose/crates/repose-text" }
repose-canvas = { path = "/home/ymsr/Documents/Repos/repose/crates/repose-canvas" }
repose-docking = { path = "/home/ymsr/Documents/Repos/repose/crates/repose-docking" }

# Media & GPU
wgpu = "28"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"

# Media
ffmpeg-next = "8"
symphonia = { version = "0.5", features = ["all"] }
rubato = "1"
cpal = "0.17"

# Image processing
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }

# Testing
tokio-test = "0.4"
tempfile = "3"

# Proc macro helpers
trait-variant = "0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
