[package]
name = "snapshort-desktop"
version.workspace = true
edition.workspace = true

[[bin]]
name = "snapshort"
path = "src/main.rs"

[dependencies]
snapshort-domain = { path = "../domain" }
snapshort-usecases = { path = "../usecases" }
snapshort-infra-db = { path = "../infra-db" }
snapshort-ui-core = { path = "../ui-core" }

# Repose
repose-platform.workspace = true
repose-ui.workspace = true
repose-core.workspace = true

# Async & Utils
tokio.workspace = true
crossbeam-channel.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true
anyhow.workspace = true
parking_lot.workspace = true

rfd = "0.17"
