[package]
name = "snapshort-infra-media"
version.workspace = true
edition.workspace = true

[dependencies]
snapshort-domain = { path = "../domain" }

async-trait.workspace = true
tokio.workspace = true
flume.workspace = true
chrono.workspace = true
tracing.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
